--- a/Simple_CRUD.Application/Simple_CRUD.Application.csproj
+++ b/Simple_CRUD.Application/Simple_CRUD.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.TestPlatform" Version="17.9.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Simple_CRUD.Domain\Simple_CRUD.Domain.csproj" />
     <ProjectReference Include="..\Simple_CRUD.Infrastructure\Simple_CRUD.Infrastructure.csproj" />
   </ItemGroup>
