--- a/Simple_CRUD.Infrastructure/Simple_CRUD.Infrastructure.csproj
+++ b/Simple_CRUD.Infrastructure/Simple_CRUD.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
